[gd_scene load_steps=3 format=3 uid="uid://dmainmenu001"]

[ext_resource type="Script" path="res://src/ui/main_menu.gd" id="1_script"]
[ext_resource type="Theme" path="res://theme/game_theme.tres" id="2_theme"]

[node name="MainMenu" type="Control"]
theme = ExtResource("2_theme")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.1, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(450, 400)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "CHANKO NABE"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
text = "A CammTec Production"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="OptionsContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8
alignment = 1

[node name="Spacer2" type="Control" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="HintLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "WASD: Navigate | E: Select"
horizontal_alignment = 1

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -30.0
offset_right = 150.0
offset_bottom = -10.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 11
text = "v0.3.0"

[node name="AutosaveNote" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -30.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 11
text = "Game auto-saves"
horizontal_alignment = 2
